@@ -9,6 +9,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Add
 - Webhook Discord for log
 
+### Fixed
+- Module HtmlAnimeSaturn now work in parallel for download urls of episodes
+
 ## [0.2.2] - 06-04-2022
 ### Add
 - Setup default environment global
